Chk 1102 statuses refactoring (#31)
* feat: new statuses enumeration

* feat: refactoring events

* feat: refactoring events

* feat: fix test utils

* feat: fix test utils

* fix: spotless appy

* fix: add junit tests + lombok.config

* fix: removed deprecated constructors

* fix: code smell

* fix: code smell

* fix: javadoc

* fix: address changes

* fix: address changes

* fix(docs): fix grammar in docs comment

---------

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>